--- a/index.html
+++ b/index.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test name</title>
+  <meta charset='UTF-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <title>Test name</title>
 </head>
-<body>  
+<body>
 <header>
-    <nav>
-<!--        Logo and menu-->
-    </nav>
-<!--    Button for call -->
+  <nav>
+    <!--        Logo and menu-->
+  </nav>
+  <!--    Button for call -->
 </header>
 <main>
-
+  <section>
+    <h1>Сучасна пекарня</h1>
+  </section>
+  <section>
+    <h2>Новий формат традицій</h2>
+  </section>
+  <section>
+    <h2>Наші найкраще шеф-кухарі</h2>
+    <article></article>
+    <article></article>
+  </section>
+  <section>
+    <h2>Формати</h2>
+    <article></article>
+    <article></article>
+    <article></article>
+  </section>
+  <section>
+    <h2>Приєднуйтесь до мережі пекарень</h2>
+  </section>
 </main>
 </body>
 </html>
