--- a/index.html
+++ b/index.html
@@ -8,31 +8,120 @@
 <body>
 <header>
   <nav>
-    <!--        Logo and menu-->
+    <a href='#'>
+      <img src='./images/logo.svg' alt='Логотип сучасної пекарні'>
+    </a>
+
+    <ul>
+      <li><a href='#'>Франшиза</a></li>
+      <li><a href='#'>Наші традиції</a></li>
+      <li><a href='#'>Формати</a></li>
+      <li><a href='#'>Контакти<</a></li>
+    </ul>
   </nav>
-  <!--    Button for call -->
+<button type=''></button>
 </header>
 <main>
   <section>
     <h1>Сучасна пекарня</h1>
   </section>
   <section>
+    <ul>
+      <li>Великий попит на ринку</li>
+      <li>Доступні за бюджетом формати</li>
+      <li>Досвідчена управлінська команда</li>
+    </ul>
     <h2>Новий формат традицій</h2>
+    <p><span>shop bakery</span> — це пекарня, яка взяла все найкраще,
+      і зберегла смак традиційної випічки та натуральність
+      інгредієнтів.</p>
+    <p><span>Ми працюємо як найвідоміші мережі—
+      5 хвилин і замовлення готове.</span>
+      А ще у наших пекарень стильний дизайн
+      та висока якість обслуговування!</p>
+    <img src='images/BakerMan.jpg' alt='Чоловік пекар дивиться на батони із посмішкою'>
   </section>
   <section>
-    <h2>Наші найкраще шеф-кухарі</h2>
-    <article></article>
-    <article></article>
+    <h2>Наші найкращі шеф-кухарі</h2>
+    <ul>
+      <li>
+        <article>
+          <h3>Настя</h3>
+          <p>Привіт, я Настя!</p>
+
+          <p>Вже 10 років, я свтілюю
+            у життя цікаві та смачні ідеї.</p>
+          <p> Я випічу для вас
+            найсмачніщі вироби!</p>
+
+        </article>
+      </li>
+      <li>
+        <article>
+          <h3>Влад</h3>
+          <p>Привіт, я Влад! </p>
+          <p>Мій кодитерський стаж вже 18 років
+            SHOP BEKERY - це наша любов, з якою ми ділимось
+            кожен раз з Вами через нашу випічку!</p>
+          <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+        </article>
+      </li>
+    </ul>
+
+
   </section>
   <section>
     <h2>Формати</h2>
-    <article></article>
-    <article></article>
-    <article></article>
+    <ul>
+      <li>
+        <article><h3>Walrus</h3></article>
+      </li>
+      <li>
+        <article><h3>Horseshoe</h3></article>
+      </li>
+      <li>
+        <article><h3>Handlbar</h3></article>
+      </li>
+    </ul>
   </section>
   <section>
     <h2>Приєднуйтесь до мережі пекарень</h2>
   </section>
 </main>
+<footer>
+  <nav>
+    <a href='#'>
+      <img src='./images/logo.svg' alt='Логотип сучасної пекарні'>
+
+    </a>
+
+    <ul>
+      <li><a href='#'>Франшиза</a></li>
+      <li><a href='#'>Наші традиції</a></li>
+      <li><a href='#'>Формати</a></li>
+      <li><a href='#'>Контакти<</a></li>
+    </ul>
+  </nav>
+  <address>
+    <ul>
+      <li><a href='tel:+380960000007'>+ 38 (096) 000 00 07</a></li>
+      <li><a href='mailto:shopbakery@gmail.com'>shopbakery@gmail.com</a></li>
+      <li><a target='_blank' href='https://maps.app.goo.gl/Wfb6yxaoyup6mMHt9'>Україна, м. Київ,
+        вул. Січових Стрільців 54</a></li>
+      <li>
+        <a href='#'></a>
+<!--        Facebook icon-->
+      </li>
+      <li>
+        <a href='#'>
+          <!--       Instagram  icon-->
+
+        </a>
+      </li>
+    </ul>
+    <a href='#' target='_blank'> Політика конфеденційності</a>
+    <p>© 2022 Дані захищені</p>
+  </address>
+</footer>
 </body>
 </html>
